feat: introduce MantineUI
Adds support for Mantine UI components

Signed-off-by: Luca Zaninotto <luca.zaninotto@secomind.com>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^2.8.3",
+    "@mantine/charts": "^8.3.4",
+    "@mantine/code-highlight": "^8.3.4",
+    "@mantine/core": "^8.3.4",
+    "@mantine/dropzone": "^8.3.4",
+    "@mantine/hooks": "^8.3.4",
+    "@mantine/modals": "^8.3.4",
     "@monaco-editor/react": "^4.7.0-rc.0",
     "@tanstack/react-table": "^8.19.2",
     "@types/js-cookie": "^3.0.6",
@@ -36,6 +42,9 @@
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
+    "postcss": "^8.5.6",
+    "postcss-preset-mantine": "^1.18.0",
+    "postcss-simple-vars": "^7.0.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.4",
@@ -47,6 +56,7 @@
     "react-relay": "^17.0.0",
     "react-router-dom": "^6.24.1",
     "react-select": "^5.8.0",
+    "recharts": "^3.2.1",
     "relay-compiler": "^17.0.0",
     "relay-runtime": "^17.0.0",
     "sass": "^1.77.6",
