--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "@mantine/hooks": "^8.3.4",
     "@mantine/modals": "^8.3.4",
     "@monaco-editor/react": "^4.7.0-rc.0",
+    "@tabler/core": "^1.4.0",
+    "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-table": "^8.19.2",
     "@types/js-cookie": "^3.0.6",
     "@types/leaflet": "^1.9.12",
