--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -36,6 +36,6 @@ jobs:
         with:
           # TODO: make this an organization token
           token: ${{ secrets.ADMIN_TOKEN }}
-          release-type: simple
           config-file: .github/release-please/config.json
           manifest-file: .github/release-please/manifest.json
+          target-branch: main-alt-tmp
