--- a/.github/release-please/config.json
+++ b/.github/release-please/config.json
@@ -1,26 +1,23 @@
 {
   "bump-minor-pre-major": true,
-  // TODO: remove once the flow is enstablished and PRs can be opened autonomously by the bot
-  "draft": true,
+  "bump-patch-for-minor-pre-major": true,
   "packages": {
     "backend": {
-      "package-name": "edgehog-backend",
+      "package-name": "backend",
       "release-type": "elixir",
-      "group": "global-release",
-      "component": "backend"
+      "group": "edgehog"
     },
     "frontend": {
-      "package-name": "edgehog-frontend",
+      "package-name": "frontend",
       "release-type": "node",
-      "group": "global-release",
-      "component": "frontend"
+      "group": "edgehog"
     }
   },
   "plugins": [
     {
       "type": "linked-versions",
-      "groupName": "global-release",
-      "components": ["backend", "frontend"]
+      "groupName": "edgehog",
+      "tagName": "v${version}"
     }
   ],
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
