--- a/.github/release-please/config.json
+++ b/.github/release-please/config.json
@@ -1,27 +1,18 @@
 {
   "bump-minor-pre-major": true,
-  // TODO: remove once the flow is enstablished and PRs can be opened autonomously by the bot
+  "bump-patch-for-minor-pre-major": true,
   "draft": true,
   "packages": {
     "backend": {
-      "package-name": "edgehog-backend",
+      "package-name": "backend",
       "release-type": "elixir",
-      "group": "global-release",
-      "component": "backend"
+      "changelog-path": "backend/CHANGELOG.md"
     },
     "frontend": {
-      "package-name": "edgehog-frontend",
+      "package-name": "frontend",
       "release-type": "node",
-      "group": "global-release",
-      "component": "frontend"
+      "changelog-path": "frontend/CHANGELOG.md"
     }
   },
-  "plugins": [
-    {
-      "type": "linked-versions",
-      "groupName": "global-release",
-      "components": ["backend", "frontend"]
-    }
-  ],
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
 }
