--- a/.github/release-please/config.json
+++ b/.github/release-please/config.json
@@ -1,27 +1,31 @@
 {
-  "bump-minor-pre-major": true,
-  // TODO: remove once the flow is enstablished and PRs can be opened autonomously by the bot
-  "draft": true,
-  "packages": {
-    "backend": {
-      "package-name": "edgehog-backend",
-      "release-type": "elixir",
-      "group": "global-release",
-      "component": "backend"
+    "bump-minor-pre-major": true,
+    "bump-patch-for-minor-pre-major": true,
+    // TODO: remove once the flow is enstablished and PRs can be opened autonomously by the bot
+    "draft": true,
+    "packages": {
+        "backend": {
+            "package-name": "backend",
+            "release-type": "elixir",
+            "group": "global-release",
+            "component": "backend",
+            "changelog-path": "backend/CHANGELOG.md"
+        },
+        "frontend": {
+            "package-name": "frontend",
+            "release-type": "node",
+            "group": "global-release",
+            "component": "frontend",
+            "changelog-path": "frontend/CHANGELOG.md"
+        }
     },
-    "frontend": {
-      "package-name": "edgehog-frontend",
-      "release-type": "node",
-      "group": "global-release",
-      "component": "frontend"
-    }
-  },
-  "plugins": [
-    {
-      "type": "linked-versions",
-      "groupName": "global-release",
-      "components": ["backend", "frontend"]
-    }
-  ],
-  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
+    "plugins": [
+        {
+            "type": "linked-versions",
+            "groupName": "global-release",
+            "tagName": "v${version}"
+            "components": ["backend", "frontend"]
+        }
+    ],
+    "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
 }
